--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -21,6 +21,20 @@
         </lightning-tab>
         <lightning-tab label="Boat Editor">
             <!-- Scrollable div and lightning datatable go here -->
+            <template if:true={boats}>
+                <div class="slds-scrollable_y">
+                    <!-- lightning-datatable to display the boats -->
+                    <lightning-datatable
+                        key-field="Id"
+                        data={boats}
+                        columns={columns}
+                        draft-values={draftValues}
+                        onsave={handleSave}
+                        hide-checkbox-column="true"
+                        show-row-number-column="true">
+                    </lightning-datatable>
+                </div>
+            </template>
         </lightning-tab>
         <lightning-tab label="Boats Near Me">
             <!-- boatsNearMe component goes here -->
