--- a/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
@@ -5,15 +5,18 @@
             <div class="slds-spinner_container">
                 <lightning-spinner 
                     alternative-text="Loading" 
-                    variant="brand">
+                    variant="brand"
+                    size="medium">
                 </lightning-spinner>
             </div>
         </template>
         <!-- The lightning-map goes here -->
-        <lightning-map 
-            map-markers={mapMarkers} 
-            list-view="visible">
-        </lightning-map>
-        <div slot="footer">Top 10 Only!</div>
+        <template if:true={isRendered}>
+            <lightning-map 
+                map-markers={mapMarkers} 
+                center={center}>
+            </lightning-map>
+            <div slot="footer">Top 10 Only!</div>
+        </template>
     </lightning-card>
 </template>
