--- a/LWCPersonalDev/force-app/main/default/lwc/boatDetailTabs/boatDetailTabs.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatDetailTabs/boatDetailTabs.html
@@ -8,14 +8,15 @@
         </lightning-card>
     </template>
     <template if:true={wiredRecord.data}>
-        <!-- scoped lightning-tabset, add a lightning-tab using the custom label Details as the tab label -->
         <lightning-tabset variant="scoped">
+            
+            <!-- Details tab -->
             <lightning-tab label={label.labelDetails}>
-                <!-- lightning card for the content when wiredRecord has data goes here  -->
                 <lightning-card title={boatName} icon-name={detailsTabIconName} padding="around-small">
                     <!-- button to navigate to the record view page for the selected boat -->
                     <lightning-button label={label.labelFullDetails} onclick={navigateToRecordViewPage}  slot="actions"></lightning-button>
                     <div class="slds-m-around-small">
+                        <!-- lightning-record-view-form to display selected boat details -->
                         <lightning-record-view-form record-id={boatId} object-api-name="Boat__c" density="compact"  padding="around-small">
                             <lightning-output-field field-name="BoatType__c"></lightning-output-field>
                             <lightning-output-field field-name="Length__c"></lightning-output-field>
@@ -25,15 +26,15 @@
                     </div>
                 </lightning-card>
             </lightning-tab>
-        </lightning-tabset>
-        <!-- lightning-tabset, add a lightning-tab using the custom label Add_Review as the tab label -->
-        <lightning-tabset variant="scoped">
+            
+            <!-- Add Review tab -->
             <Lightning-tab label={label.labelAddReview}>
                 <div class="slds-m-around_small">
                     <!-- boatAddReviewForm-->
-                    <!-- <c-boat-add-review-form record-id={boatId} oncreatereview={handleCreateReview}></c-boat-add-review-form> -->
+                    <c-boat-add-review-form record-id={boatId} oncreatereview={handleCreateReview}></c-boat-add-review-form>
                 </div>
             </Lightning-tab>
+
         </lightning-tabset>
     </template>
 </template>
