--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearch/boatSearch.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearch/boatSearch.html
@@ -23,7 +23,7 @@
 
             <template if:true={isLoading}>
                 <div class="slds-spinner_container">
-                    <lightning-spinner alternative-text="Loading" size="large"></lightning-spinner>
+                    <lightning-spinner alternative-text="Loading" variant="brand" size="large"></lightning-spinner>
                 </div>
             </template>
 
