--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -1,12 +1,12 @@
 <template>
-    <lightning-tabset>
+    <lightning-tabset variant="scoped">
         <lightning-tab label="Gallery">
             <!-- only show if there are boats -->
             <template if:true={boats}>
                 <div class="slds-scrollable_y">
                     <!-- layout horizontally aligned to the center  -->
                     <!-- layout allowing multiple rows -->
-                    <lightning-layout horizontal-align="centre" multiple-rows="true">
+                    <lightning-layout horizontal-align="center" multiple-rows="true">
                         <!-- template looping through each boat -->
                         <template for:each={boats} for:item="boat">
                             <!-- lightning-layout-item for each boat -->
