--- a/LWCPersonalDev/force-app/main/default/lwc/boatAddReviewForm/boatAddReviewForm.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatAddReviewForm/boatAddReviewForm.html
@@ -1,3 +1,4 @@
+<!-- Description: Component to add a review to a boat -->
 <template>
     <!-- lightning data service code -->
     <!-- <lightning-record-edit-form> using boatReviewObject -->
