--- a/LWCPersonalDev/force-app/main/default/lwc/boatReviews/boatReviews.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatReviews/boatReviews.html
@@ -1,3 +1,4 @@
+<!-- Description: This component displays the list of reviews for a boat -->
 <template>
     <!-- div for when there are no reviews available -->
     <template if:false={reviewsToShow}>
