--- a/LWCPersonalDev/force-app/main/default/lwc/boatTile/boatTile.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatTile/boatTile.html
@@ -1,3 +1,4 @@
+<!-- Description: Boat tile component, displays the boat information and image. -->
 <template>
     <div onclick={selectBoat} class={tileClass}>
         <div style={backgroundStyle} class="tile"></div>
