--- a/LWCPersonalDev/force-app/main/default/lwc/boatMap/boatMap.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatMap/boatMap.html
@@ -1,3 +1,4 @@
+<!-- Description: Boat Map Component, displays the boat location as a map -->
 <template>
     <lightning-card title="Current Boat Location" icon-name="action:map">
         <template if:true={showMap}>
