--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearch/boatSearch.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearch/boatSearch.html
@@ -1,3 +1,4 @@
+<!-- Description : Boat Search Component containing the search form and the search results -->
 <template>
     <lightning-layout multiple-rows>
         
