--- a/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
@@ -1,6 +1,7 @@
+<!-- Description: This component displays a map with boat locations -->
 <template>
     <lightning-card class="slds-is-relative">
-        <!-- The template and lightning-spinner goes here -->
+        <!-- Display a spinner if isLoading is true -->
         <template if:true={isLoading}>
             <div class="slds-spinner_container">
                 <lightning-spinner 
@@ -10,7 +11,7 @@
                 </lightning-spinner>
             </div>
         </template>
-        <!-- The lightning-map goes here -->
+        <!-- Map component -->
         <template if:true={isRendered}>
             <lightning-map 
                 map-markers={mapMarkers} 
