--- a/LWCPersonalDev/force-app/main/default/lwc/fiveStarRating/fiveStarRating.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/fiveStarRating/fiveStarRating.html
@@ -1,3 +1,4 @@
+<!-- Description: fiveStarRating component, shows 5 stars and highlights the number of stars selected. -->
 <template>
     <ul class={starClass}></ul>
 </template>
