--- a/LWCPersonalDev/force-app/main/default/lwc/similarBoats/similarBoats.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/similarBoats/similarBoats.html
@@ -1,3 +1,4 @@
+<!-- Description: Similar Boats component, displays a list of similar boats, based on the boat type. -->
 <template>
     <lightning-card title={getTitle} icon-name="custom:custom54">
         <lightning-layout multiple-rows="true">
