--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
@@ -1,6 +1,8 @@
+<!-- Description : Search Form for boat search page, filtered by boat type -->
 <template>
     <lightning-layout>
         <lightning-layout-item class="slds-align-middle">
+            <!-- Create the lightning-input-field for the boat search -->
             <lightning-combobox
                 class="slds-align-middle"
                 name="boatType"
