updated component to handle marker select to publish to the boat message channel

--- a/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
@@ -15,7 +15,9 @@
         <template if:true={isRendered}>
             <lightning-map 
                 map-markers={mapMarkers} 
-                center={center}>
+                center={center}
+                onmarkerselect={handleMarkerSelect}
+                >
             </lightning-map>
             <div slot="footer">Top 10 Only!</div>
         </template>
