--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
@@ -1,6 +1,6 @@
 <!-- Description : Search Form for boat search page, filtered by boat type -->
 <template>
-    <div class="slds-box slds-p-around_none slds-m-top_x-small slds-m-bottom_medium slds-m-horizontal_none">
+    <div class="slds-box slds-p-around_small slds-m-top_small slds-m-bottom_small slds-m-horizontal_none">
         <lightning-layout>
             <lightning-layout-item class="slds-align-middle" padding="horizontal-medium">
                 <!-- Create the lightning-input-field for the boat search -->
