--- a/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatsNearMe/boatsNearMe.html
@@ -1,7 +1,7 @@
 <!-- Description: This component displays a map with boat locations -->
 <template>
     <lightning-card class="slds-is-relative">
-
+        {maxPrice}
         <!-- Display a spinner if isLoading is true -->
         <template if:true={isLoading}>
             <div class="slds-spinner_container">
@@ -12,7 +12,7 @@
                 </lightning-spinner>
             </div>
         </template>
-        
+
         <!-- Map component -->
         <template if:true={isRendered}>
             <lightning-map 
