--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -63,7 +63,7 @@
         <!-- Boats Near Me tab -->
         <lightning-tab label="Boats Near Me">
             <!-- boatsNearMe component goes here -->
-            <c-boats-near-me boat-type-id={boatTypeId} max-price={maxPrice}></c-boats-near-me>
+            <c-boats-near-me boat-type-id={boatTypeId} max-price={maxPrice} max-length={maxLength}></c-boats-near-me>
         </lightning-tab>
 
     </lightning-tabset>
