--- a/LWCPersonalDev/force-app/main/default/lwc/paginator/paginator.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/paginator/paginator.html
@@ -1,7 +1,7 @@
 <!-- Description: Paginator component, displays Previous and Next buttons. -->
 <template>
     <div
-        class="slds-grid slds-grid_vertical-align-center slds-var-m-horizontal_x-small">
+        class="slds-grid slds-grid_vertical-align-center slds-p-vertical_x-small">
         <div class="slds-col slds-size_2-of-12">
             <lightning-button-icon
                 lwc:if={isNotFirstPage}
