--- a/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/LWCPersonalDev/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -45,14 +45,6 @@
         <lightning-tab label="Boat Editor">
             <!-- Scrollable div and lightning datatable go here -->
             <template if:true={boats}>
-                <!-- pagination for the Boat Editor table -->
-                <c-paginator
-                    page-number={pageNumber}
-                    page-size={pageSize}
-                    total-item-count={totalItemCount}
-                    onprevious={handlePreviousPage}
-                    onnext={handleNextPage}
-                ></c-paginator>
                 <div class="slds-scrollable_y slds-p-vertical_small">
                     <!-- lightning-datatable to display the boats -->
                     <lightning-datatable
@@ -61,13 +53,21 @@
                         columns={columns}
                         draft-values={draftValues}
                         onsave={handleSave}
-                        hide-checkbox-column="true"
-                        show-row-number-column="true"
+                        max-row-selection="1"
                         sorted-by={sortBy}
                         sorted-direction={sortDirection}
-                        onsort={updateColumnSorting}>
+                        onsort={updateColumnSorting}
+                        onrowselection={handleBoatSelection}>
                     </lightning-datatable>
                 </div>
+                 <!-- pagination for the Boat Editor table -->
+                 <c-paginator
+                 page-number={pageNumber}
+                 page-size={pageSize}
+                 total-item-count={totalItemCount}
+                 onprevious={handlePreviousPage}
+                 onnext={handleNextPage}
+             ></c-paginator>
             </template>
         </lightning-tab>
         
